# optimal-yatzy

./: .gitignore  CLAUDE.md  Makefile  README.md  kernel.cu  main.cu  precompute.h  precompute_std.h  simulate_stats.cpp  test_dp_exact.cpp  test_precompute_std.cpp  test_yatzy_cli.sh  test_yatzy_engine.cpp  wasm_bridge.cpp  yatzy_cpu.cpp  yatzy_engine.cpp  yatzy_engine.h
docs/superpowers/plans/: 2026-07-12-standard-yatzy-cpu-solver.md  2026-07-12-yatzy-desktop-gui.md  2026-07-13-yatzy-gui-visual-redesign.md  2026-07-15-yatzy-gui-vs-computer.md  2026-07-15-yatzy-win-probability-strategy.md  2026-07-19-yatzy-browser-wasm.md
docs/superpowers/specs/: 2026-07-12-standard-yatzy-cpu-solver-design.md  2026-07-12-yatzy-desktop-gui-design.md  2026-07-13-yatzy-gui-visual-redesign-design.md  2026-07-15-yatzy-gui-vs-computer-design.md  2026-07-15-yatzy-win-probability-strategy-design.md  2026-07-19-yatzy-browser-wasm-design.md
gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
gui/scripts/: build-sidecar.sh  build-wasm.sh  sync-to-windows.sh
gui/src/: cliArgs.test.ts  cliArgs.ts  engine.ts  main.ts  match.test.ts  match.ts  parseResult.test.ts  parseResult.ts  render.ts  sidecar.ts  state.test.ts  state.ts  styles.css  vite-env.d.ts  wasmEngine.ts  wasmEngineStub.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/wasm/: yatzy_engine.d.ts
