[package]
name = "optiyatzy"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "optiyatzy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# Standard Tauri release-size tuning: strips debug symbols, enables full
# LTO, and builds as a single codegen unit for better cross-crate
# optimization — trades slower release builds for a meaningfully smaller
# binary. Doesn't affect dev builds (`cargo build`/`tauri dev`).
[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

